assets/stylesheets/site.css
/* ... */
body {
  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
  line-height: 1.6;
  font-weight: 400;
  font-family: font-family: 'Taviraj', serif;
  color: #414141;
}

.container {
  display: block;
  position:absolute;
  bottom:0;
  top:0;
  left:0;
  right:0;
  color: #FCFCFC;
  background-color: #056571;
  text-shadow: 1px 1px 1px #414141;
}

/* Typography
–––––––––––––––––––––––––––––––––––––––––––––––––– */
h1, h2, h3, h4, h5, h6 {
  font-family: 'Work Sans', sans-serif;
  margin-top: 0;
  margin-bottom: 2rem;
  font-weight: 300;
}

p, ul, li{
  margin-top: 0;
}

.container:after,
.row:after,
.u-cf {
  content: "";
  display: table;
  clear: both; }


/*! ----------------------------------------------------- */
/*! ----------------------------------------------------- */

/*.colors{
  color: #414141;
  color: #CCDFCB;
  color: #FF6A5C;
  color: #056571;
}*/

.family_photo {
  background-image: url("../images/kaczmarek-family.jpg");
  min-height: 320px;
  background-size: 100% auto;
  background-repeat: no-repeat;
  background-position: center bottom;
  position: relative;
}

.family_photo:before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-image: linear-gradient(to bottom right,#056571,#FF6A5C);
  opacity: .2; 
}

.family_photo__credit {
  position: absolute;
  bottom: 0px;
  right: 0px;
  margin: 0px;
  padding: 1px 8px;
  background-color: #FF6A5C;
  opacity: .8;
  font-size: 70%;
}

.family_photo__credit a {
  color: #056571;
  text-shadow: none;
}

.family_photo__credit a:hover {
  opacity: 0.8
}

.welcome {
  padding: 2rem 4%;
  overflow: auto;
  background-color: #056571;
}

.welcome__greeting {
  font-size: 2.8rem;
  margin-top: 0.2rem;
  line-height: 1.5;
  letter-spacing: 0.2rem;
  font-weight: 600;
}

.welcome__about {
  margin: 1rem auto;
  font-size: 16px;
  font-size: 1.6rem;
  line-height: 1.2;
  font-weight:600;
}

.welcome__line {
  display: flex;
  justify-content: center;
}

.window, .full, .pre, .post {
  margin-bottom: 10px;
  
}

.full span {
  letter-spacing: 0.2rem;
}

.post {
  padding-left: 8px;
  padding-right: 8px;
}

.pre {
  padding-right: 8px;
}

.mail {
  background-image: url("../images/mail.svg");
  height: 42px;
  width: 48px;
  background-size: 100% auto;
  display: block;
  margin: 2px auto;
}

.mail:hover {
  opacity: 0.8;
}

.not_found {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.not_found h1 {
  font-size: 8rem;
  text-align: center;
  color: #CCDFCB;
}

.not_found a {
  font-size: 2.2rem;
  text-align: center;
  color: #FF6A5C;
}

.not_found a:hover {
  opacity: 0.8;
}


/* Animation
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.window {
  overflow: hidden;
  height: 22px;
  border-bottom: 3px solid #FF6A5C;
  display: inline-block;
}

.options {
  margin: 0;
  padding: 0;
  text-align: left;
  list-style: none;
  animation: 25s linear 0s normal none infinite change;
}

.options__item {
  margin: 0;
  line-height: 2.0rem;
}


@-webkit-keyframes change {
  0%, 13% {transform:translate3d(0,0,0);}
  16%, 29% {transform:translate3d(0,-14.29%,0);}
  31%, 44% {transform:translate3d(0,-28.57%,0);}
  47%, 60% {transform:translate3d(0,-42.86%,0);}
  63%, 76% {transform:translate3d(0,-57.14%,0);}
  79%, 92% {transform:translate3d(0,-71.43%,0);}
  95%, 100% {transform:translate3d(0,-85.71%,0);}
}

@-o-keyframes change {
  0%, 13% {transform:translate3d(0,0,0);}
  16%, 29% {transform:translate3d(0,-14.29%,0);}
  31%, 44% {transform:translate3d(0,-28.57%,0);}
  47%, 60% {transform:translate3d(0,-42.86%,0);}
  63%, 76% {transform:translate3d(0,-57.14%,0);}
  79%, 92% {transform:translate3d(0,-71.43%,0);}
  95%, 100% {transform:translate3d(0,-85.71%,0);}
}

@-moz-keyframes change {
  0%, 13% {transform:translate3d(0,0,0);}
  16%, 29% {transform:translate3d(0,-14.29%,0);}
  31%, 44% {transform:translate3d(0,-28.57%,0);}
  47%, 60% {transform:translate3d(0,-42.86%,0);}
  63%, 76% {transform:translate3d(0,-57.14%,0);}
  79%, 92% {transform:translate3d(0,-71.43%,0);}
  95%, 100% {transform:translate3d(0,-85.71%,0);}
}

@keyframes change {
  0%, 13% {transform:translate3d(0,0,0);}
  16%, 29% {transform:translate3d(0,-14.29%,0);}
  31%, 44% {transform:translate3d(0,-28.57%,0);}
  47%, 60% {transform:translate3d(0,-42.86%,0);}
  63%, 76% {transform:translate3d(0,-57.14%,0);}
  79%, 92% {transform:translate3d(0,-71.43%,0);}
  95%, 100% {transform:translate3d(0,-85.71%,0);}
}

/* Responsive
–––––––––––––––––––––––––––––––––––––––––––––––––– */

@media (min-width: 315px) {
  .welcome__about {
    font-size: 2.0rem;
  }

  .window {
    height: 22px;
  }

  .options__item {
    line-height: 2.2rem;
  }
}

/* Larger than mobile */
@media (min-width: 400px) {
  .family_photo {
    min-height: 450px;
  }
  
  .welcome__greeting {
    font-size: 2.2rem;
  }

  .welcome__about {
    font-size: 2.6rem;
  }

  .window {
    height: 26px;
  }

  .options__item {
    line-height: 2.8rem;
  }
}

@media (min-width: 560px) and (orientation: portrait) {
  .family_photo {
    background-position: center 80%;
  }
  
  .window, .full, .pre, .post {
    margin-bottom: 20px;
  }

  .welcome__about {
    font-size: 3.2rem;
  }

  .window {
    height: 32px;
  }

  .options__item {
    line-height: 3.4rem;
  }
}

@media (min-width: 560px) and (orientation: landscape) {
  .container {
    display: flex;
  }

  .family_photo {
    flex-grow: 2;
    background-size: cover;
    min-height: 280px;
    min-width: 220px;
  }

  .welcome {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .welcome__about {
    font-size: 2.0rem;
  }

  .window {
    height: 22px;
  }

  .options__item {
    line-height: 2.2rem;
  }
}
/* ... */

